# research_evaluation_pipeline

./: .gitignore  LICENSE  README.md  agent.py  build.sh  config.py  eval_profiles.toml  evaluate.py  logger.py  main.py  pyproject.toml  schema.py
.github/workflows/: ci.yml
resources/: prompt_basic.md  prompt_detailed.md  prompts_default.yaml
resources/markdown_cache/: 0400.md
resources/preprocessing_cache/: 0400_gemini-3.1-pro-preview.md  refined_prompt_gemini-3.1-pro-preview_3a20c411e323d96ff819904db1ffed1e.md
resources/profiles/: client.toml  execution.toml
resources/prompt_cache/: refined_3a20c411e323d96ff819904db1ffed1e.txt
scripts/: run_pipeline.sh  run_stage.sh  run_step.sh  test_paper.sh
src/research_evaluation_pipeline/: __init__.py  cli.py  convenience.py  runner.py
src/research_evaluation_pipeline/cli/: __init__.py  convenience.py  main.py  resource_loader.py
src/research_evaluation_pipeline/clients/: factory.py  gemini.py  gemini_provider.py  openai_provider.py  provider_protocol.py
src/research_evaluation_pipeline/config/: client_settings.py  execution_settings.py  prompt_registry.py
src/research_evaluation_pipeline/core/: artifact_store.py  domain.py  enums.py  logger.py  master_orchestrator.py  paper_context.py  resource_loader.py  step_executor.py
src/research_evaluation_pipeline/logic/: protocol.py
src/research_evaluation_pipeline/reporting/: generator.py  schemas.py
src/research_evaluation_pipeline/result/: builder.py  schemas.py
src/research_evaluation_pipeline/service/: artifact_key_builder.py  master_orchestrator.py  paper_context_service.py  prompt_service.py  step_executor.py
src/rrp_eval/: agent.py  cli.py  config.py  evaluate.py  logger.py  schema.py
tests/: conftest.py  test_agent.py  test_gemini_provider.py  test_pipeline_orchestration.py  test_step_executor.py
(+9 files in other folders)
