[project]
name = "test-private-evaluation-base"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-genai>=1.70.0",
    "keyring>=25.7.0",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pymupdf4llm>=1.27.2.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "respx>=0.23.1",
    "rich>=14.3.3",
    "tomli>=2.4.1",
    "typer>=0.24.2",
]

[project.scripts]
rrp-eval = "rrp_eval.cli:app"

[tool.pytest.ini_options]
pythonpath = ["src"]
